.k8s/overlays/local-with-istio/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proficient-pixy
spec:
  template:
    spec:
      containers:
        - name: app
          imagePullPolicy: Always
          volumeMounts:
            - name: spc-secrets
              mountPath: /etc/secrets/app
              readOnly: true
      volumes:
        - name: spc-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: pixy-greeting-handshake-spc
